fix overflow

--- a/public/stylesheets/_articles.scss
+++ b/public/stylesheets/_articles.scss
@@ -299,6 +299,7 @@ textarea {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 2rem;
+  text-align: justify;
 }
 
 .article_title {
