--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -600,6 +600,7 @@ textarea {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 2rem;
+  text-align: justify;
 }
 
 .article_title {
@@ -830,6 +831,42 @@ textarea {
     padding: 5rem 0;
   }
 
+  .main_header {
+    padding: 0 1rem;
+  }
+
+  .git_logo {
+    display: none;
+  }
+
+  .img_container {
+    width: 18%;
+  }
+
+  .user_bar_details {
+    width: 80%;
+  }
+
+  .comments, .likes {
+    width: 6%;
+  }
+
+  .comments_count, .likes_count {
+    font-size: 1rem;
+  }
+
+  .user_bar:hover .arrow_articleinfo {
+    animation: none;
+  }
+
+  .arrow_container {
+    padding: 1rem 2rem;
+    right: 0.6rem;
+    top: 0.6rem;
+    border-radius: 1rem;
+    background-color: rgba(94, 93, 93, 0.1);
+  }
+
   .wrapper {
     width: 100%;
     margin: 0;
@@ -838,6 +875,14 @@ textarea {
 
   .author_name_prefix {
     animation: none;
+  }
+
+  .user_comments_box {
+    max-height: 9rem;
+  }
+
+  .trash, .edit {
+    width: 70%;
   }
 }
 
